# INFT2503

./: 1b.txt  CMakeLists.txt  ReadMe.md  Teorioppgaver.docx  assignment.cpp  client.cpp  commodity.hpp  equals.cpp  exercise1.cpp  exercise4.cpp  exercise5.cpp  exercise6.cpp  fraction.cpp  fraction.hpp  pair.cpp  set.cpp  set.hpp  stl.cpp  string_practice.cpp  task1.cpp  task2.cpp  web.cpp
assignment_1/: solution.cpp  solution2.cpp  temperatures.txt
